Modernize internal p2 metadata Member classes
This improves the Requirement.hashCode() method.